--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -46,7 +46,7 @@ height="2191" -->
       fill="#767171"
       font-weight="400"
       font-size="110"
-      transform="matrix(1 0 0 1 2292.44 1988)">????</text>
+      transform="matrix(1 0 0 1 2292.44 1988)">Ensure the reproducibility of your research</text>
     </a>
 
     <a href="" class="hover:scale-105 transition-transform shadows-into-light-two-regular" style="transform-origin: 3260.45px 566px;">
@@ -643,7 +643,7 @@ height="2191" -->
     >
     <a 
       id="upper-left" 
-      href="" 
+      href="/community-and-partners" 
       class="hover:scale-105 transition-transform shadows-into-light-two-regular"
       style="transform-origin: 625.5px 249.5px;">
       <path
