add imprint and privacy policy :sparkles:

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,8 +19,8 @@ import logo from '~/assets/images/DataPLANT_logo_bg_transparent.svg';
     </aside>
     <nav>
       <h4 class="footer-title">Legal</h4>
-      <a href="#">Imprint 🚧</a>
-      <a href="#">Privacy Policy 🚧</a>
+      <a href="/imprint">Imprint</a>
+      <a href="/privacy-policy">Privacy Policy</a>
     </nav>
     <nav>
       <h6 class="footer-title">Help</h6>
