--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -62,7 +62,7 @@ const files : MarkdownInstance<Record<string,any>> [] = await Astro.glob('../con
           }
       </div>
     </div>
-    <MainPageNews
+    <MainPageNews />
   </div>
 </Layout>
 
