--- a/src/layouts/MarkdownLayout.astro
+++ b/src/layouts/MarkdownLayout.astro
@@ -1,7 +1,11 @@
 ---
 import Layout from './Layout.astro';
 
-const { frontmatter, headings } = Astro.props;
+const { 
+  frontmatter, 
+  headings,
+  hasContentBefore = await Astro.slots.has('before-content'), 
+} = Astro.props;
 
 export interface Heading {
   depth: number;
@@ -135,9 +139,10 @@ const noInPageNavigation = nestedHeadings.length === 0;
   <div class="flex grow lg:py-5 flex-row items-start relative">
     <div id="md-layout-left" class="w-[20%] h-full hidden lg:block"></div>
     <!-- <div id="md-layout-left" class="w-[20%] h-full"></div> -->
-    <div id="md-layout-center" class="w-full lg:w-[60%] flex justify-center">
+    <div id="md-layout-center" class="w-full lg:w-[60%] flex justify-center flex-col items-center">
+      <slot name="before-content"></slot>
       <article class="prose lg:prose-lg xl:prose-xl grow p-5 overflow-hidden sm:overflow-visible">
-        <h1>{frontmatter.title}</h1>
+        {!hasContentBefore ? <h1>{frontmatter.title}</h1> : null}
         <!-- <p class="subtitle">Written by {frontmatter.author}</p> -->
         <div id="md-content" class="text-justify">
           <slot />
