clean up :broom:

--- a/src/components/MainPageCard.astro
+++ b/src/components/MainPageCard.astro
@@ -2,7 +2,7 @@
 import { bgColorMap, textColorMap } from "../statics"
 import {Image} from 'astro:assets'
 import type { CollectionEntry } from 'astro:content';
-import { getEntry, getEntries } from 'astro:content';
+import { getEntry } from 'astro:content';
 
 interface Props {
   card: CollectionEntry<'mainpagecards'>
