--- a/src/components/Publication.astro
+++ b/src/components/Publication.astro
@@ -1,5 +1,5 @@
 ---
-import { bgColorMap, textColorMap, textHoverColorMap} from "../statics"
+import { bgColorMap } from "../statics"
 
 interface PublicationProps {
   id: string;
