--- a/src/pages/events/[...slug].astro
+++ b/src/pages/events/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import MarkdownLayout from '~/layouts/MarkdownLayout.astro';
-import { getCollection, getEntry } from 'astro:content';
+import { getCollection } from 'astro:content';
 import { Image } from 'astro:assets';
 import SocialShare from '~/components/widgets/SocialShare.astro';
 import EventInfoList from '~/components/events/EventInfoList.astro';
