--- a/src/pages/events/index.astro
+++ b/src/pages/events/index.astro
@@ -1,5 +1,5 @@
 ---
-import { getCollection, getEntry } from 'astro:content';
+import { getCollection } from 'astro:content';
 import Layout from "~/layouts/Layout.astro"
 import { groupByYear } from '../news/index.astro';
 import { Image } from 'astro:assets';
