--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -1,6 +1,6 @@
 ---
 import MarkdownLayout from "~/layouts/MarkdownLayout.astro"
-import { getCollection, getEntry } from 'astro:content';
+import { getCollection } from 'astro:content';
 
 
 export async function getStaticPaths() {
