--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -3,7 +3,7 @@ import {BibtexParser, type Entry} from "bibtex-js-parser";
 import fs from 'node:fs';
 import Layout from '../layouts/Layout.astro';
 import Publication from '~/components/Publication.astro';
-import { bgColorMap, textColorMap, groupBy} from "../statics"
+import { groupBy} from "../statics"
 import { glob } from 'glob'
 
 const bibtex_files = await glob("src/content/publications/*.bib");
