--- a/src/pages/news/index.astro
+++ b/src/pages/news/index.astro
@@ -67,7 +67,7 @@ const keys = Object.keys(groupedNews)
                       
                     </article>
                     <div class="flex grow justify-end items-end px-2">
-                      <a href={news.slug} class="btn btn-link">
+                      <a href={`/news/${news.slug}`} class="btn btn-link">
                         Read more
                         <Icon name="tabler:arrow-right" class="w-4 h-4" />
                       </a>
