fix become a member link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,7 +36,7 @@ const mainPageCards = await getCollection('mainpagecards');
         {
           variant: 'primary',
           text: 'Become a member',
-          href: 'https://github.com/onwidget/astrowind',
+          href: 'https://auth.nfdi4plants.org/realms/dataplant/protocol/openid-connect/auth?client_id=account&redirect_uri=https%3A%2F%2Fauth.nfdi4plants.org%2Frealms%2Fdataplant%2Faccount%2Flogin-redirect&state=0%2F2083ce25-95bf-4a38-ba82-0502f7060042&response_type=code&scope=openid',
           target: '_blank',
           icon: 'tabler:user-plus',
         },
